--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -71,24 +71,24 @@ ingresses:
 
 alertmanager-configs:
   enabled: false
-  defaults:
-    slackConfigs:
-      sendResolved: true
-      color: '{{ if eq .Status "firing" }}{{ if eq .CommonLabels.severity "critical" }}danger{{ else }}warning{{ end }}{{ else }}good{{ end }}'
-      title: '[{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }} {{ if eq .CommonLabels.severity "critical" }}:fire:{{ else }}:warning:{{ end }}{{ else }} :ok:{{ end }}]'
-      text: >-
-        {{ range .Alerts }}
-            *Alert:* {{ .Annotations.summary }} - `{{ .Labels.severity }}`
-            *Description:* {{ .Annotations.description }}
-            *Details:*
-            {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
-            {{ end }}
-        {{ end }}
   configs:
     main:
       enabled: false
       selector:
         alertmanager: main
+      route:
+        continue: false
+        routes:
+          #Default route
+          - receiver: "default"
+            matchers:
+              - name: env
+                value: "{{ .Values.global.env.short_name }}"
+              - name: team
+                value: "sre"
+              - name: severity
+                value: "(low|medium|high|critical)"
+                matchType: "=~"
       inhibitRules:
         - sourceMatch:
             - name: severity
