globals: remove alert receivers

--- a/charts/globals.yaml
+++ b/charts/globals.yaml
@@ -34,12 +34,7 @@ global:
   access:
     teams: ["admin"]
     emails: []
-  alerts:
-    receivers:
-      - name: default
-        slackConfigs:
-          - channel: "#alerts-{{ .Values.global.company.name }}-cloud"
-            useDefaults: true
+  alerts: {}
   pomerium:
     policy:
       default: |
