Alerts to globals (#62)
* chart_deps/postgres/postgres-cluster: sort sidecars for predictable order

* `prometheus`:
  move alertmanager-config defaults to `chart_deps/prometheus/alertmanager-configs` chart
  move alertmanager-config `route` section to chart values
`chart_deps/prometheus/alertmanager-configs`:
  slackConfigs to defaults
  support go templates for receivers
`chart_deps/prometheus/alertmanager-configs`:
  `useTpl` -> `useDefaults`

* globals: remove alert receivers

* environments: alerts to default env values

* cchart_deps/postgres/postgres-cluster: fix sortedAlpha issue

* cchart_deps/postgres/postgres-cluster: fix sortedAlpha issue for metrics

--- a/charts/chart_deps/postgres/postgres-cluster/templates/postgres.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/templates/postgres.yaml
@@ -4,7 +4,15 @@ If sidecar has the same key as the default sidecar
 its attrs override the attrs of the default one
 */}}
 {{- $sidecars := merge .Values.sidecars $defaultSidecars }}
-{{- $sidecars = values $sidecars }}
+{{/*
+We need to use sortAlpha here so that sidecars will appear
+in predictable order. Also sortAlpha cant be used with 'values'
+function because it doesnt produce object
+*/}}
+{{- $sidecars_list := list }}
+{{- range $sName := (keys $sidecars | sortAlpha) }}
+{{- $sidecars_list = append $sidecars_list (get $sidecars $sName) }}
+{{- end }}
 ---
 apiVersion: "acid.zalan.do/v1"
 kind: postgresql
@@ -79,7 +87,7 @@ spec:
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
   sidecars:
-  {{- range $sObj := $sidecars }}
+  {{- range $sObj := $sidecars_list }}
   - name: {{ $sObj.name }}
     image: {{ $sObj.image }}
     {{- with $sObj.ports }}
