prometheus: route hotfix - mandatory receiver

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -77,6 +77,7 @@ alertmanager-configs:
       selector:
         alertmanager: main
       route:
+        receiver: default
         continue: false
         routes:
           #Default route
