chart_deps/prometheus/alertmanager-configs: fix tg message template

--- a/charts/chart_deps/prometheus/alertmanager-configs/values.yaml
+++ b/charts/chart_deps/prometheus/alertmanager-configs/values.yaml
@@ -24,15 +24,14 @@ defaults:
       name: alertmanager
       key: receiver-secret
     message: |
-      *[{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}* {{ if eq .CommonLabels.severity "critical" }}:fire:{{ else }}:warning:{{ end }}{{ else }} :ok:{{ end }}*]*
-      {{ range .Alerts }}
-          *Alert:* {{ .Annotations.summary }} - `{{ .Labels.severity }}`
-          *Description:* {{ .Annotations.description }}
+        \[{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }} {{ if eq .CommonLabels.severity "critical" }}🔥{{ else }}{{ end }}{{ else }}👍{{ end }}\]
+        {{ range .Alerts }}
+          *Alert:* `{{ .Annotations.summary }} - {{ .Labels.severity }}`
+          *Description:* `{{ .Annotations.description }}`
           *Details:*
-          {{ range .Labels.SortedPairs }} - *{{ .Name }}:* `{{ .Value }}`
+          {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
           {{ end }}
-      {{ end }}
-
+        {{ end }}
 
 configs: {}
 #  someconfigname:
