chart_deps/prometheus/{prometheus,alertmanger}-operated: externalUrl add schemas

--- a/charts/chart_deps/prometheus/alertmanager-operated/values.yaml
+++ b/charts/chart_deps/prometheus/alertmanager-operated/values.yaml
@@ -93,7 +93,7 @@ alertmanager:
 
     volumeMounts: {}
 
-    externalUrl: "al.{{ .Values.global.company.domain.env }}"
+    externalUrl: "https://al.{{ .Values.global.company.domain.env }}"
 
     routePrefix: "/"
 
