--- a/charts/chart_deps/prometheus/prometheus-operated/values.yaml
+++ b/charts/chart_deps/prometheus/prometheus-operated/values.yaml
@@ -142,7 +142,7 @@ prometheus:
 
     enableFeatures: []
 
-    externalUrl: "pm.{{ .Values.global.company.domain.env }}"
+    externalUrl: "https://pm.{{ .Values.global.company.domain.env }}"
 
     routePrefix: "/"
 
