chart_deps/prometheus/alertmanager-configs: move tg channel id to defaults

--- a/charts/chart_deps/prometheus/alertmanager-configs/values.yaml
+++ b/charts/chart_deps/prometheus/alertmanager-configs/values.yaml
@@ -20,6 +20,7 @@ defaults:
   telegramConfigs:
     sendResolved: true
     parseMode: 'MarkdownV2'
+    chatID: -1002710518017
     botToken:
       name: alertmanager
       key: receiver-secret
