add gf ds spec.uid

--- a/charts/chart_deps/grafana/datasources/templates/datasources.yaml
+++ b/charts/chart_deps/grafana/datasources/templates/datasources.yaml
@@ -18,6 +18,9 @@ spec:
   {{- if $ds_obj.allowCrossNamespaceImport }}
   allowCrossNamespaceImport: {{ $ds_obj.allowCrossNamespaceImport }}
   {{- end }}
+  {{- if $ds_obj.uid }}
+  uid: {{ $ds_obj.uid }}
+  {{- end }}
   {{- with $ds_obj.datasource }}
   datasource:
     name: {{ $ds_obj.name }}
