--- a/charts/chart_deps/grafana/datasources/templates/datasources.yaml
+++ b/charts/chart_deps/grafana/datasources/templates/datasources.yaml
@@ -7,7 +7,7 @@ kind: GrafanaDatasource
 metadata:
   labels:
 {{- include "grafana-datasources.labels" $ | nindent 4 }}
-  name: {{ $ds_obj.name }}
+  name: {{ tpl $ds_obj.name  . }}
 spec:
   {{- if $ds_obj.selector }}
   instanceSelector:
@@ -19,11 +19,11 @@ spec:
   allowCrossNamespaceImport: {{ $ds_obj.allowCrossNamespaceImport }}
   {{- end }}
   {{- if $ds_obj.uid }}
-  uid: {{ $ds_obj.uid }}
+  uid: {{ tpl $ds_obj.uid . }}
   {{- end }}
   {{- with $ds_obj.datasource }}
   datasource:
-    name: {{ $ds_obj.name }}
+    name: {{ tpl $ds_obj.name . }}
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
   {{- with $ds_obj.plugins }}
