--- a/charts/chart_deps/grafana/datasources/templates/datasources.yaml
+++ b/charts/chart_deps/grafana/datasources/templates/datasources.yaml
@@ -19,7 +19,7 @@ spec:
   allowCrossNamespaceImport: {{ $ds_obj.allowCrossNamespaceImport }}
   {{- end }}
   {{- if $ds_obj.uid }}
-  uid: {{ tpl $ds_obj.uid . }}
+  uid: {{ tpl $ds_obj.uid $ }}
   {{- end }}
   {{- with $ds_obj.datasource }}
   datasource:
