--- a/charts/chart_deps/grafana/datasources/templates/datasources.yaml
+++ b/charts/chart_deps/grafana/datasources/templates/datasources.yaml
@@ -7,7 +7,7 @@ kind: GrafanaDatasource
 metadata:
   labels:
 {{- include "grafana-datasources.labels" $ | nindent 4 }}
-  name: {{ tpl $ds_obj.name  . }}
+  name: {{ tpl $ds_obj.name $ }}
 spec:
   {{- if $ds_obj.selector }}
   instanceSelector:
@@ -23,7 +23,7 @@ spec:
   {{- end }}
   {{- with $ds_obj.datasource }}
   datasource:
-    name: {{ tpl $ds_obj.name . }}
+    name: {{ tpl ($ds_obj.name .) $ }}
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
   {{- with $ds_obj.plugins }}
