--- a/charts/chart_deps/grafana/datasources/templates/datasources.yaml
+++ b/charts/chart_deps/grafana/datasources/templates/datasources.yaml
@@ -1,7 +1,7 @@
 {{- range $name, $ds := .Values.datasources }}
 {{- $tplName := tpl $name $ -}}
 {{- if $ds.enabled }}
-{{- if $tplName eq "loki-tpl" }}
+{{- if ($tplName | quote) eq "loki-tpl" }}
 
 ---
 apiVersion: grafana.integreatly.org/v1beta1
