fix variable path

--- a/charts/environment/values.yaml
+++ b/charts/environment/values.yaml
@@ -98,7 +98,8 @@ chart_apps:
         access:
           teams: ["admin", "dev", "pm", "qa"]
           emails: []
-      externalEnvs: {{ .Values.externalEnvs }}
+      datasource:
+        externalEnvs: {{ .Values.externalEnvs }}
   konghq:
     enabled: false
     values: |
