fix var externalEnvs

--- a/charts/environment/values.yaml
+++ b/charts/environment/values.yaml
@@ -99,8 +99,9 @@ chart_apps:
           teams: ["admin", "dev", "pm", "qa"]
           emails: []
       datasource:
-        loki-tpl:
-          externalEnvs: {{ .Values.externalEnvs }}
+        datasources:
+          loki-tpl:
+            externalEnvs: {{ .Values.externalEnvs }}
   konghq:
     enabled: false
     values: |
