--- a/charts/chart_deps/grafana/datasources/templates/datasources-lokiTpl.yaml
+++ b/charts/chart_deps/grafana/datasources/templates/datasources-lokiTpl.yaml
@@ -1,6 +1,6 @@
-{{- if .Values.datasources.loki-tpl.enabled }}
-{{- $ds := .Values.datasources.loki-tpl }}
-{{- range $name, $env := .Values.datasources.loki-tpl.externalEnvs }}
+{{- if .Values.datasources.lokiTpl.enabled }}
+{{- $ds := .Values.datasources.lokiTpl }}
+{{- range $name, $env := $ds.externalEnvs }}
 {{- $envName := tpl $name $ -}}
 
 ---
