--- a/charts/grafana/values.yaml
+++ b/charts/grafana/values.yaml
@@ -117,7 +117,7 @@ datasource:
         url: http://loki-read.loki.svc.cluster.local:3100
         jsonData:
           manageAlerts: 'false'
-    loki-tpl:
+    lokiTpl:
       enabled: true
       selector:
         grafana: main
