try fix range only1 env

--- a/charts/chart_deps/grafana/datasources/templates/datasources-lokiTpl.yaml
+++ b/charts/chart_deps/grafana/datasources/templates/datasources-lokiTpl.yaml
@@ -1,3 +1,4 @@
+{{- range $name, $env := .Values.datasources.lokiTpl.externalEnvs }}
 {{- if .Values.datasources.lokiTpl.enabled }}
 {{- $ds := .Values.datasources.lokiTpl }}
 {{- range $name, $env := $ds.externalEnvs }}
